# Calculo-numerico

./: README.md  calculo.js  calculo_numerico.py  index.html  pyproject.toml
public/: index.html
root/: calculo.js
