[tool.poetry]
name = "calculo-numerico"
version = "0.1.0"
description = ""
authors = ["João Vitor da Costa Andrade <jvcostaandrade7399@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.65.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
